--- a/.github/workflows/pull_requests.yml
+++ b/.github/workflows/pull_requests.yml
@@ -12,7 +12,7 @@ jobs:
 
     if: github.event_name == 'pull_request'
     steps:
-    - uses: actions/checkout@master
+    - uses: actions/checkout@main
       with:
         ref: ${{ github.ref }}
     - run: curl -fsSL https://deb.nodesource.com/setup_16.x | sudo -E bash -
