--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cssplus",
+  "name": "@multiprocess/cssplus",
   "version": "0.3.0",
   "license": "Apache-2.0",
   "description": "Basic SASS transforms",
