--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.0",
   "license": "Apache-2.0",
   "description": "Fast nested CSS rule expander in JavaScript",
-  "author": "Phil Eaton",
+  "author": "Multiprocess Labs LLC",
   "main": "./dist/index.js",
   "types": "./dist/cssplus.d.ts",
   "scripts": {
